default/objects/RM_Svg__c/RM_Svg__c.object-meta.xml
<CustomObject>
    <label>Relationship Map Badge</label>
    <nameField>
        <label>Relationship Map Badge Names</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Map Badges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>