default/objects/RM_Svg__c/fields/Contact_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Field_API_Name__c</fullName>
    <description>The api name of the field on the Contact Object.  This Contact field must be a checkbox.  By populating this field name, whenever the contact field is checked, the badge appears on the contact card.</description>
    <inlineHelpText>The api name of the field on the Contact Object.  This Contact field must be a checkbox.  By populating this field name, whenever the contact field is checked, the badge appears on the contact card.</inlineHelpText>
    <label>Contact Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>