default/objects/RM_Svg__c/fields/For_Automation_Use_Only__c.field-meta.xml
<CustomField>
    <fullName>For_Automation_Use_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if this badge is used for automation.  It will no appear in the menu for users to select.</description>
    <inlineHelpText>Check this box if this badge is used for automation.  It will no appear in the menu for users to select.</inlineHelpText>
    <label>For Automation Use Only</label>
    <type>Checkbox</type>
</CustomField>