default/objects/RM_Svg__c/fields/Geometry_String__c.field-meta.xml
<CustomField>
    <fullName>Geometry_String__c</fullName>
    <description>This is an SVG &apos;path&apos; element, containing commands to draw the badge shape.</description>
    <inlineHelpText>This is an SVG &apos;path&apos; element, containing commands to draw the badge shape.</inlineHelpText>
    <label>Geometry String</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>