default/objects/RM_Svg__c/fields/Used_in_all_account_plans__c.field-meta.xml
<CustomField>
    <fullName>Used_in_all_account_plans__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to make this badge available to all Prolifiq CRUSH Key Stakeholder Maps.</description>
    <inlineHelpText>Check this box to make this badge available to all Prolifiq CRUSH Key Stakeholder Maps.</inlineHelpText>
    <label>Used in all Account Plans</label>
    <type>Checkbox</type>
</CustomField>