default/objects/RM_Svg__c/fields/View_Box__c.field-meta.xml
<CustomField>
    <fullName>View_Box__c</fullName>
    <description>The View Box attribute defines the position and dimension, in user space, of an SVG Viewport. The numbers are separated by spaces. Example: 0 0 50 50.</description>
    <inlineHelpText>The View Box attribute defines the position and dimension, in user space, of an SVG Viewport. The numbers are separated by spaces. Example: 0 0 50 50</inlineHelpText>
    <label>View Box</label>
    <length>255</length>
    <type>Text</type>
</CustomField>